--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,3 +20,7 @@ body {
   overflow-x: hidden;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.glow {
+  filter: drop-shadow(0 0 8px #8c1df3);
+}
