--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,7 @@ body {
 
 @layer base {
   :root {
+    --footer-height: 80px;
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
     --card: 0 0% 100%;
